--- a/src/components/ButtonLogic.css
+++ b/src/components/ButtonLogic.css
@@ -1,5 +1,10 @@
 .button_wrapper {
     text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .component_wrapper {
